# NativeBit

./: .gitignore  README.md  autoresearch_jax.py  autoresearch_run.py  benchmark.py  benchmark_posthoc_125m.py  export.py  pyproject.toml  requirements.txt  run_doe_rq.py  train.py
analysis/: dashboard.py  visualizations.py
autoresearch/: __init__.py  analyzer.py  config_space.py  evaluator.py  evaluator_jax.py  leaderboard.py  report.py  report_writer.py  runner.py  strategies.py  trial.py
benchmarks/: benchmark_posthoc.py  benchmark_posthoc_2b.py
configs/: default.py  large.py  tpu.py
experiments/: bench_125m.py  block_sweep.py  doe_sweep.py  lr_sweep.py  phase1.py  phase2.py  phase2_validate.py  phase2b_improvements.py  phase2c_sweep.py  phase3_ablations.py  phase3_benchmarks.py  phase_a.py  phase_b_ema.py  phase_c_residual.py  phase_d_factored.py  phase_e_sweep.py  run_350m_clean.py  scaleup.py  tinystories.py  tinystories_ema.py  tpu_overnight.py
inference/: compare.py  cuda_kernel.py  eval_ppl.py  generate.py  generate_torch.py  pack.py  triton_kernel.py
nativebit/: __init__.py  baselines.py  codebook_utils.py  data.py  device.py  generate.py  inference.py  layers.py  logging.py  model.py  pack.py  seed.py
nativebit_jax/: __init__.py  codebook_utils.py  layers.py  model.py  packed_kernel.py  seed.py  train.py
scripts/: provision_2b.sh  run_2b.sh  test_fsdp.py
tests/: test_attention_fix.py  test_canonical_ema.py  test_data.py  test_generate.py  test_layers.py  test_model.py  test_pack.py  test_qat_init.py  test_quant_reg.py  test_train.py
(+3 files in other folders)
