[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "nativebit"
version = "0.1.0"
description = "Train neural networks in their quantized representation from birth"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "tiktoken",
    "matplotlib",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest"]
ci = [
    "pytest",
    "tiktoken",
    "matplotlib",
    "tqdm",
    "jax",
    "flax",
    "optax",
    "ml_dtypes",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
